fixed overflows fro windows
- login form overflow fixed
- assignment button overflow fixed

--- a/slatecheck-extention/src/components/Assignment.css
+++ b/slatecheck-extention/src/components/Assignment.css
@@ -38,6 +38,7 @@
 }
 .options{
   display: flex;
+  overflow: hidden;
 }
 .options a{
   overflow: hidden;
